@@ -1,3 +1,8 @@
+Sept 7, 2022  - Adding functionalities (v3.3.18)
+                **v3.3.18**
+                -----------
+                * **new** *   : Allow to import .cs particles files
+
 Sept 1, 2022  - Fixing errors (v3.3.17)
                 **v3.3.17**
                 -----------
